docs: add fn docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Rob Ede <robjtede@icloud.com>"]
 description = "String deserializers customization for serde"
 categories = ["encoding", "no-std", "no-std::no-alloc"]
-keywords = ["serde", "utilities", "deserialization"]
+keywords = ["deserialization", "utilities", "serde"]
 repository = "https://github.com/x52dev/detrim"
 license = "MIT OR Apache-2.0"
 edition = "2018"
@@ -21,3 +21,4 @@ serde_json = "1"
 rust_2018_idioms = "deny"
 nonstandard_style = "deny"
 future_incompatible = "deny"
+missing_docs = { level = "warn", priority = -1 }
