feat: add hashset_string

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,14 @@ license = "MIT OR Apache-2.0"
 edition = "2018"
 rust-version = "1.56.1"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
+[features]
+default = ["std"]
+std = []
+
 [dependencies]
 serde = { version = "1", default-features = false, features = ["alloc"] }
 
