--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/x52dev/detrim"
 license = "MIT OR Apache-2.0"
 edition = "2018"
 rust-version = "1.56.1"
+exclude = [".*", "justfile", "flake.*"]
 
 [package.metadata.docs.rs]
 all-features = true
