--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "detrim"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Rob Ede <robjtede@icloud.com>"]
-description = "String deserializers customization for serde"
+description = "Automatic string trimming with serde"
 categories = ["encoding", "no-std"]
 keywords = ["deserialization", "utilities", "serde"]
 repository = "https://github.com/x52dev/detrim"
