--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -74,10 +74,10 @@ jobs:
       - name: Checkout PR branch
         uses: actions/checkout@v4
 
-      - name: Install Rust
+      - name: Install Rust (${{ vars.RUST_VERSION_API_DIFF }})
         uses: actions-rust-lang/setup-rust-toolchain@v1.10.1
         with:
-          toolchain: nightly-2024-04-26
+          toolchain: ${{ vars.RUST_VERSION_API_DIFF }}
 
       - name: Install cargo-public-api
         uses: taiki-e/install-action@v2.45.14
